fix vertical photos overflow

--- a/app/assets/stylesheets/web/styles.less
+++ b/app/assets/stylesheets/web/styles.less
@@ -1032,6 +1032,7 @@ footer {
 .personal__userpic__img {
     max-width: 280px;
     max-height: 280px;
+    overflow: hidden;
     border: 1px solid #d9d9d9;
 
     img {
